--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/jmccasusi/bfc_api#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.6.9"
   }
